--- a/SignInForm.html
+++ b/SignInForm.html
@@ -28,7 +28,7 @@
 				<a href="#">Forgot Password ?</a>
 				<a href="#">Signup</a>
 			</div>
-			<input type="submit" value="Login">
+			<input type="submit" value="Sign in">
 		</form>
 	</div>
 </body>
