--- a/SignInForm.html
+++ b/SignInForm.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="header">
 		<nav>
-			<img src="images/logo.png" alt="Netflix logo" class="logo">
+			<a href="index.html"><img src="images/logo.png" alt="Netflix logo" class="logo"></a>
 		</nav>
 	</div>
 	<div class="box">
