--- a/SignInForm.html
+++ b/SignInForm.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Animated Login Form</title>
+	<title>Sign in</title>
 	<link rel="stylesheet" href="SignIn.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
 	</div>
 	<div class="box">
 		<form autocomplete="off">
-			<h2>Sign in</h2>
+			<h2>Sign In</h2>
 			<div class="inputBox">
 				<input type="text" required="required">
 				<span>Userame</span>
