--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <i class="fa-solid fa-globe"></i>
                     English
                     <img src="images/down-icon.png"></button> -->
-                    <a href="SignInForm.html"><button>Sign In</button></a>
+                    <a href="SigninForm.html"><button>Sign In</button></a>
                 </div>
             </nav>
             <div class="header-content">
