--- a/SignInForm.html
+++ b/SignInForm.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Sign in</title>
-	<link rel="stylesheet" href="signin.css">
+	<link rel="stylesheet" href="SignIn.css">
 </head>
 <body>
 	<div class="header">
